--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "lint": "eslint ./src --fix",
     "start": "react-native start",
     "test": "jest",
     "testUpdtSnap": "jest -u",
     "detox:android_build": "detox build --configuration android.emu.debug",
     "detox:android_test": "detox test --configuration android.emu.debug",
     "detox:ios_build": "detox build --configuration ios.sim.debug",
-    "detox:ios_test": "detox test --configuration ios.sim.debug"
+    "detox:ios_test": "detox test --configuration ios.sim.debug",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -54,9 +55,12 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "babel-jest": "^29.6.3",
     "detox": "^20.36.5",
     "eslint": "^8.19.0",
+    "eslint-plugin-testing-library": "^7.5.3",
+    "husky": "^8.0.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
