again testing actions 2

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "detox:ios_test": "detox test --configuration ios.sim.debug",
     "prepare": "husky install",
     "detox:genymotion_debug":"detox test --configuration android.genycloud.debug -l verbose --workers 2 --record-logs all --take-screenshots all",
-    "detox:genymotion_release":"detox test --configuration android.genycloud.release -l verbose --workers 2 --record-logs all --take-screenshots all"
+    "detox:genymotion_release":"detox test --configuration android.genycloud.release -l verbose --workers 2 --record-logs all --take-screenshots all",
+      "format": "prettier --write ."
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.6.1",
