--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,8 @@ jobs:
                -d '{"content":"🚨 Testing Failed Error In Testing Linting, Prettier !"}' \
                ${{ secrets.DISCORD_WEBHOOK_URL }}
 
+      
+
       - name: Send Discord Notification on Success
         if: success()
         run: |
@@ -69,6 +71,13 @@ jobs:
                -d '{"content":"✅ Testing Passed Hooray !!!"}' \
                ${{ secrets.DISCORD_WEBHOOK_URL }}
 
+      - name: workflow dispatch actual one
+        if: success()
+        uses: peter-evans/repository-dispatch@v3.0.0
+        with:
+          event-type: myEvent
+          client-payload: '{"name" : authenticity laughs last }'
+  
   deploy:
     runs-on: ubuntu-latest
     needs: lint-and-test
