--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 name: CI and CD
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+      
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
